# alphagenome-encoder-ft

./: .gitignore  README.md  conda_packages.txt  pyproject.toml  test.ipynb
configs/: ag_jores.json  ag_tomato.json  ag_tomato_bestvalpear.json  ag_tomato_redoverfit.json  deep_tomato.json  deeptomato.json  optimal_tomato.json  tomatompra.json
configs/reference/: deeptomatointoconfig.json  lentimpra_HepG2.json  lentimpra_K562.json  lentimpra_WTC11.json  optimal_WTC11.json
metadata/: 10_barcode_thresh  5_barcode_thresh  Supplementary Data Set 1.xlsx  Supplementary Full Dataset 2.xlsx  all_log2_activity.tsv  all_log2_activity_imputed.tsv  chromosome_readout_percentages  full_pseudocount_log2.tsv  imputation_dict.json  pseudocounted_log2.tsv  test.txt  train.txt
scripts/: train_mpra.py  tune_status.py
scripts/0_preprocess/: data_prep.py
scripts/1_finetune/: train_ag.py  train_ag_tune.py  train_deeptomato.py  tune.py
scripts/2_test/: evaluate_jores.py  list_runs.py  list_tune_runs.py  plot_jores_scatter.py
src/alphagenome_encoder_ft/: __init__.py  config.py  heads.py  model.py  mydata.py  train.py
src/deeptomato/: __init__.py  deng_model.py  metrics.py  plotting.py  training.py
tests/: my_test_data.py  test_constructs.py  test_mpra_head.py  test_mydata.py  test_train.py
wandb/: latest-run
wandb/run-20260626_170825-0dcrv5os/: run-0dcrv5os.wandb
wandb/run-20260626_172558-crql4hea/: run-crql4hea.wandb
wandb/run-20260629_110552-1sbtftq5/: run-1sbtftq5.wandb
wandb/run-20260629_152901-nqzkij7l/: run-nqzkij7l.wandb
(+276 files in other folders)
