[project]
name = "alphagenome-encoder-ft"
version = "0.1.0"
description = "Encoder-only AlphaGenome fine-tuning utilities for lentiMPRA."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alphagenome-pytorch @ git+https://github.com/genomicsxai/alphagenome-pytorch.git",
    "ipykernel>=7.3.0",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "torch==2.6.0",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.uv]
default-groups = ["train", "dev"]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[dependency-groups]
train = [
    "matplotlib>=3.10.8",
    "wandb>=0.25.1",
]
dev = [
    "ipykernel>=7.3.0",
]
